actualizacion de proyecto david

--- a/style/sass.css
+++ b/style/sass.css
@@ -2026,31 +2026,32 @@ p {
 }
 
 @media (max-width: 800px) {
-  .cont_proyectos_scrolls {
+  .body_proyecto .cont_proyectos_scrolls {
     display: flex;
     flex-direction: column;
     position: relative;
     height: 100vh;
     overflow: hidden;
   }
-  .cont_proyectos_scrolls .cont_inicios {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios {
     height: 90vh;
     display: flex;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
     border-bottom: solid 1px black;
     overflow: hidden;
   }
-  .cont_proyectos_scrolls .cont_inicios .colum_unos {
-    padding-left: 1.5em;
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos {
+    padding: 1.5em 1em 1em 1em;
     display: flex;
     align-items: start;
     flex-direction: column;
     justify-content: center;
-    width: 60vw;
+    width: 100vw;
     gap: 2em;
   }
-  .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo {
     width: -moz-fit-content;
     width: fit-content;
     padding: 5px 10px;
@@ -2060,7 +2061,7 @@ p {
     justify-content: center;
     align-items: start;
   }
-  .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo p {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo p {
     font-family: monaregular;
     font-size: 15px;
     font-weight: normal;
@@ -2071,13 +2072,13 @@ p {
     text-align: center;
     color: #fff;
   }
-  .cont_proyectos_scrolls .cont_inicios .colum_unos .titulo {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .titulo {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
   }
-  .cont_proyectos_scrolls .cont_inicios .colum_unos .titulo h1 {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .titulo h1 {
     flex-grow: 0;
     font-family: monaextrabold;
     font-size: 6vw;
@@ -2089,7 +2090,7 @@ p {
     text-align: left;
     color: #000;
   }
-  .cont_proyectos_scrolls .cont_inicios .colum_unos .parrafo p {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .parrafo p {
     height: 20px;
     flex-grow: 0;
     font-family: monaregular;
@@ -2102,8 +2103,8 @@ p {
     text-align: center;
     color: #000;
   }
-  .cont_proyectos_scrolls .cont_inicios .cont_banner {
-    width: 40vw;
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .cont_banner {
+    width: 100vw;
     height: 100vh;
     background: #111111;
     display: flex;
@@ -2112,10 +2113,10 @@ p {
     overflow: hidden;
     border-left: #000 solid 1px;
   }
-  .cont_proyectos_scrolls .cont_inicios .cont_banner .video_pro_jannier {
+  .body_proyecto .cont_proyectos_scrolls .cont_inicios .cont_banner .video_pro_jannier {
     height: 100%;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto {
     z-index: 1;
     filter: drop-shadow(0 -6mm 4mm rgba(0, 0, 0, 0.2));
     width: 100vw;
@@ -2126,32 +2127,32 @@ p {
     flex-direction: column;
     height: 100vh;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto h3 {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto h3 {
     padding: 1em 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
-    font-size: 10vh;
+    font-size: 6vh;
     font-weight: 900;
     text-align: left;
     color: #000;
     border-bottom: #000 solid 1px;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto {
     display: flex;
     flex-direction: column-reverse;
     border-bottom: #000 solid 1px;
     align-items: center;
     height: 100%;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data {
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato {
     padding-left: 1.5em;
     display: flex;
     align-items: start;
@@ -2162,24 +2163,25 @@ p {
     border-right: 1px solid black;
     gap: 0.5em;
     position: relative;
+    border-bottom: #000 solid 1px;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .titulo {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .titulo {
     font-family: monaregular;
-    font-size: 1.2vw;
+    font-size: 3vw;
     line-height: 1.36;
     letter-spacing: normal;
     text-align: left;
     color: #000000;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .dato {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .dato {
     font-family: monabold;
-    font-size: 2vw;
+    font-size: 4vw;
     font-weight: 500;
     letter-spacing: normal;
     text-align: left;
     color: #000;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon {
     background: #ff4d00;
     top: 0;
     position: absolute;
@@ -2187,23 +2189,23 @@ p {
     border-bottom: 1px solid black;
     border-left: 1px solid black;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon img {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data .cont_dato .cont_icon img {
     filter: invert(100%);
-    margin: 2em;
-    width: 4vw;
+    margin: 1.5em;
+    width: 5vw;
   }
-  .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
+  .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto .cont_data_proyecto .data_proyecto {
     padding: 3em 1.5em 3em 1.5em;
     width: 100%;
     font-family: monaregular;
-    font-size: 1.2vw;
+    font-size: 3vw;
     font-weight: 400;
     letter-spacing: normal;
     text-align: left;
     color: #000;
     border-bottom: #000 1px solid;
   }
-  .cont_proyectos_scrolls .cont_paletadecolores {
+  .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores {
     z-index: 2;
     filter: drop-shadow(0 -6mm 4mm rgba(0, 0, 0, 0.2));
     width: 100vw;
@@ -2214,25 +2216,25 @@ p {
     flex-direction: column;
     height: 100vh;
   }
-  .cont_proyectos_scrolls .cont_paletadecolores h3 {
+  .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores h3 {
     padding: 1em 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
-    font-size: 10vh;
+    font-size: 6vh;
     font-weight: 900;
     text-align: left;
     color: #000;
     border-bottom: #000 solid 1px;
   }
-  .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores {
+  .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
     border-bottom: #000 solid 1px;
   }
-  .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno {
+  .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno {
     width: 100%;
     height: 100%;
     display: flex;
@@ -2242,9 +2244,9 @@ p {
     padding: 10px 15px;
     box-shadow: inset 0 0 12.7px 0 rgba(0, 0, 0, 0.25);
   }
-  .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno .titulo {
+  .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno .titulo {
     font-family: monaregular;
-    font-size: 1vw;
+    font-size: 3vw;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -2253,9 +2255,9 @@ p {
     text-align: left;
     color: #ffffff;
   }
-  .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno p {
+  .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores .cont_cont_colores .cont_color_uno p {
     font-family: monamedium;
-    font-size: 2vw;
+    font-size: 4vw;
     font-weight: 900;
     font-stretch: normal;
     font-style: normal;
@@ -2264,7 +2266,7 @@ p {
     text-align: end;
     color: #ffffff;
   }
-  .cont_proyectos_scrolls .cont_fuentes {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes {
     z-index: 3;
     filter: drop-shadow(0 -6mm 4mm rgba(0, 0, 0, 0.2));
     width: 100vw;
@@ -2275,17 +2277,17 @@ p {
     flex-direction: column;
     height: 100vh;
   }
-  .cont_proyectos_scrolls .cont_fuentes h3 {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes h3 {
     padding: 1em 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
-    font-size: 10vh;
+    font-size: 6vh;
     font-weight: 900;
     text-align: left;
     color: #000;
     border-bottom: #000 solid 1px;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente {
     border-bottom: #000 solid 1px;
     padding-top: 2em;
     padding-left: 2em;
@@ -2297,9 +2299,9 @@ p {
     width: 100%;
     height: 100%;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente p {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente p {
     font-family: monamedium;
-    font-size: 1.2vw;
+    font-size: 3vw;
     font-weight: 300;
     font-stretch: normal;
     font-style: normal;
@@ -2308,68 +2310,68 @@ p {
     text-align: start;
     color: #000;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente .img_font {
-    width: 10%;
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .img_font {
+    width: 30%;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess {
     height: 100%;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
     gap: 1em;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 0.5em;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font img {
-    width: 20%;
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font img {
+    width: 30%;
   }
-  .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
     display: inline;
     width: 100%;
-    font-family: Gotham;
-    font-size: 20px;
+    font-family: monaregular;
+    font-size: 3vw;
     font-weight: 300;
     line-height: 1;
     color: #000;
   }
-  .cont_img {
+  .body_proyecto .cont_img {
     background: #ffffff;
     height: 100%;
     display: flex;
     flex-direction: column;
     border-bottom: #000 solid 1px;
   }
-  .cont_img .cont_img_grup {
+  .body_proyecto .cont_img .cont_img_grup {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .cont_img .cont_img_grup .cont_img_uno {
-    width: 50%;
+  .body_proyecto .cont_img .cont_img_grup .cont_img_uno {
+    width: 100%;
     overflow: hidden;
   }
-  .cont_img .cont_img_grup .cont_img_uno img {
+  .body_proyecto .cont_img .cont_img_grup .cont_img_uno img {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .cont_img .cont_img_grup .cont_img_dos {
-    width: 50%;
+  .body_proyecto .cont_img .cont_img_grup .cont_img_dos {
+    width: 100%;
   }
-  .cont_img .cont_img_grup .cont_img_dos video {
+  .body_proyecto .cont_img .cont_img_grup .cont_img_dos video {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .cont_img .cont_img_tres {
+  .body_proyecto .cont_img .cont_img_tres {
     width: 100%;
   }
-  .cont_img .cont_img_tres img {
+  .body_proyecto .cont_img .cont_img_tres img {
     width: 100%;
   }
 }
