--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -1,6 +1,47 @@
 .body_inicio {
-    background: #ffffff;
+    width: 100vw;
     overflow-x: hidden;
+
+    .animacion_loading{
+        z-index: 9999;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffffff;
+        ul{
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: 100%; /* Adjust height as needed */
+            padding: 0;
+            margin: 0;
+            li{
+                width: 0.88%;
+                height: 100%;
+                top: 0;
+                font-family: monaextrabold;
+                font-size: 6vw;
+                font-weight: 900;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: center;
+                color: #ffffff00;
+                box-sizing: border-box;
+                display: flex;
+                justify-content: start;
+                align-items: center;
+            }
+        }
+    }
     .seccion_inicio {
         height: 90vh;
         display: flex;
