--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -1104,8 +1104,6 @@
             .cont_primera_columna_inicio {
                 width: 100vw;
                 border-right: #000 solid 1px;
-
-
                 .columna_titulo {
                     border-bottom: #000 solid 1px;
                     height: 70vh;
@@ -1118,6 +1116,7 @@
                     gap: 20px;
 
                     h1 {
+                        padding-left: 0;
                         font-family: monaextrabold;
                         font-size: 13vw;
                         font-weight: bold;
@@ -1131,7 +1130,8 @@
                     }
 
                     p {
-
+                        padding-left: 0;
+                        padding-right: 0;
                         font-family: monaregular;
                         font-size: 15px;
                         font-weight: normal;
@@ -1145,6 +1145,7 @@
                     }
 
                     .boton_hablemos {
+                        margin-left: 0;
                         width: 100%;
                         display: flex;
                         flex-direction: row;
@@ -1180,6 +1181,7 @@
                         border-left: #000000 solid 1px;
 
                         .cont_uno {
+                            margin-left: 0;
 
                             display: flex;
                             flex-direction: column;
