--- a/style/sass.css
+++ b/style/sass.css
@@ -6793,6 +6793,7 @@ p {
     gap: 20px;
   }
   .body_inicio .seccion_inicio .cont_primera_columna_inicio .columna_titulo h1 {
+    padding-left: 0;
     font-family: monaextrabold;
     font-size: 13vw;
     font-weight: bold;
@@ -6804,6 +6805,8 @@ p {
     color: #111111;
   }
   .body_inicio .seccion_inicio .cont_primera_columna_inicio .columna_titulo p {
+    padding-left: 0;
+    padding-right: 0;
     font-family: monaregular;
     font-size: 15px;
     font-weight: normal;
@@ -6815,6 +6818,7 @@ p {
     color: #111111;
   }
   .body_inicio .seccion_inicio .cont_primera_columna_inicio .columna_titulo .boton_hablemos {
+    margin-left: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -6848,6 +6852,7 @@ p {
     border-left: #000000 solid 1px;
   }
   .body_inicio .seccion_inicio .cont_primera_columna_inicio .cont_pie_titulo .contadores .cont_uno {
+    margin-left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
