--- a/style/sass.css
+++ b/style/sass.css
@@ -2055,19 +2055,19 @@ p {
     height: 90vh;
     display: flex;
     flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    justify-content: start;
     border-bottom: solid 1px black;
     overflow: hidden;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos {
-    padding: 1.5em 1em 1em 1em;
+    padding: 1.5em 1em 4em 1em;
     display: flex;
     align-items: start;
     flex-direction: column;
     justify-content: center;
     width: 100vw;
-    gap: 2em;
+    gap: 1em;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo {
     width: -moz-fit-content;
@@ -2081,7 +2081,7 @@ p {
   }
   .body_proyecto .cont_proyectos_scrolls .cont_inicios .colum_unos .tipo p {
     font-family: monaregular;
-    font-size: 15px;
+    font-size: 3vw;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
@@ -2129,7 +2129,7 @@ p {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    border-left: #000 solid 1px;
+    border-left: #000 solid 0px;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_inicios .cont_banner .video_pro_jannier {
     height: 100%;
@@ -2146,7 +2146,7 @@ p {
     height: 100vh;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto h3 {
-    padding: 1em 0.5em 1em 0.5em;
+    padding: 12vh 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
     font-size: 6vh;
@@ -2235,7 +2235,7 @@ p {
     height: 100vh;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores h3 {
-    padding: 1em 0.5em 1em 0.5em;
+    padding: 12vh 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
     font-size: 6vh;
@@ -2296,7 +2296,7 @@ p {
     height: 100vh;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_fuentes h3 {
-    padding: 1em 0.5em 1em 0.5em;
+    padding: 12vh 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
     font-size: 6vh;
@@ -6065,7 +6065,7 @@ p {
 }
 .body_inicio .cont_about_me_inicio {
   border-top: #000 solid 1px;
-  height: 100vh;
+  height: 103vh;
   display: flex;
   flex-direction: row;
   overflow: hidden;
