ajustes web proyectos

--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -110,7 +110,7 @@
             height: 100vh;
 
             h3 {
-                padding: 1em 0.5em 1em 0.5em;
+                padding: 15vh 0.5em 1em 0.5em;
                 flex-grow: 0;
                 font-family: monabold;
                 font-size: 10vh;
@@ -208,7 +208,7 @@
             height: 100vh;
 
             h3 {
-                padding: 1em 0.5em 1em 0.5em;
+                padding: 15vh 0.5em 1em 0.5em;
                 flex-grow: 0;
                 font-family: monabold;
                 font-size: 10vh;
@@ -275,7 +275,7 @@
             height: 100vh;
 
             h3 {
-                padding: 1em 0.5em 1em 0.5em;
+                padding: 15vh 0.5em 1em 0.5em;
                 flex-grow: 0;
                 font-family: monabold;
                 font-size: 10vh;
