--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -355,13 +355,16 @@ p {
                       line-height: 107.5%;
 
                       p {
+                        width: 10vw;
                           margin-right: 0.3em;
-                          color: #989898;
+                          color: #b3b3b3;
                           font-family: monalight;
-                          font-size: 5vw;
+                          font-size: 4vw;
                           font-style: normal;
-                          font-weight: 300;
+                          font-weight: 200;
                           line-height: 107.5%;
+                          align-items: center;
+                          text-align: center;
                       }
                   }
               }
