--- a/style/sass.css
+++ b/style/sass.css
@@ -304,13 +304,16 @@ p {
   line-height: 107.5%;
 }
 .conte__menui .contendor_activo_de_menu .list_menu .lista_uno .cont_opcion_lista a p {
+  width: 10vw;
   margin-right: 0.3em;
-  color: #989898;
+  color: #b3b3b3;
   font-family: monalight;
-  font-size: 5vw;
+  font-size: 4vw;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 200;
   line-height: 107.5%;
+  align-items: center;
+  text-align: center;
 }
 .conte__menui .contendor_activo_de_menu .list_menu .boton_contactar {
   width: 100%;
